OR-1149 implement get networks by id
