# pkg/http/controller.go
@@ -8,6 +8,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/tokamak-network/tokamak-titond-backend/pkg/model"
 	apptypes "github.com/tokamak-network/tokamak-titond-backend/pkg/types"
+	"gorm.io/gorm"
 )
 
 // @Summary CreateNetwork
@@ -26,12 +27,42 @@ func (s *HTTPServer) CreateNetwork(c *gin.Context) {
 	}
 }
 
-func (s *HTTPServer) GetNetworks(c *gin.Context) {
+// @Summary GetNetworksByPage
+// @Description Get networks by page
+// @ID get-networks-by-page
+// @Produce json
+// @Param id path int true "Network ID"
+// @Success 200 {object} object
+// @Failure 400
+// @Failure 404
+// @Failure 500
+// @Router /api/networks [get]
+func (s *HTTPServer) GetNetworksByPage(c *gin.Context) {
 	fmt.Println("Get Networks")
 }
 
+// @Summary GetNetworkById
+// @Description Get a network by id
+// @ID get-network-by-id
+// @Produce json
+// @Param id path int true "Network ID"
+// @Success 200 {object} object
+// @Failure 400
+// @Failure 404
+// @Failure 500
+// @Router /api/networks/{id} [get]
 func (s *HTTPServer) GetNetworkById(c *gin.Context) {
-	fmt.Println("Query Network")
+	networkID, err := strconv.ParseInt(c.Param("id"), 10, 32)
+	if err != nil {
+		s.ResponseErrorMessage(c, apptypes.ErrBadRequest)
+		return
+	}
+	result, err := s.apis.GetNetworkByID(uint(networkID))
+	if err == nil {
+		c.JSON(http.StatusOK, result)
+	} else {
+		s.ResponseErrorMessage(c, err)
+	}
 }
 
 // @Summary DeleteNetwork
@@ -87,7 +118,8 @@ func (s *HTTPServer) CreateComponent(c *gin.Context) {
 // @Description Get Component By Type
 // @ID get-component-by-type
 // @Param type query string true "Component type (e.g., l2geth)"
-// @Param network_id query integer true "Network ID"// @Produce json
+// @Param network_id query integer true "Network ID"
+// @Produce json
 // @Success 200 {object} object
 // @Failure 400
 // @Failure 500
@@ -164,6 +196,10 @@ func (s *HTTPServer) ResponseErrorMessage(c *gin.Context, err error) {
 	case apptypes.ErrInternalServer:
 		{
 			c.JSON(http.StatusInternalServerError, err)
+		}
+	case gorm.ErrRecordNotFound:
+		{
+			c.JSON(http.StatusNotFound, err)
 		}
 	default:
 		{
